mengubah font weight footer

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <!-- Akhir Contact -->
 
     <!-- Footer -->
-    <footer class="bg-primary text-white text-end p-4">
+    <footer class="bg-primary text-white text-end p-4 fw-light">
       <p>&#169; Jajang.Ent</p>
     </footer>
     <!-- Akhir Footer -->
